# Lexi

./: .dockerignore  .env.example  .gitignore  .replit  BATCH_PROCESSING_GUIDE.md  CAO_PIPELINE_INTEGRATION.md  CHATBOT_GRAPHRAG_INTEGRATION.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DIAGNOSTICS_INDEX.md  FIX_VERTEX_AI_CREDENTIALS.md  GITHUB_SECRETS_SETUP.md  HEALTH_CHECK_REPORT_2025-10-29.txt  NGINX_SECURITY.md  OPERATIONS.md  QUICK_REFERENCE.txt  README.md  README_HEALTH_CHECK.md  REQUIREMENTS_CHANGELOG.md  SECURITY_AUDIT_REPORT.md  SERVER_MANAGEMENT.md  batch_processor_helper.sh  cao_config.py  cao_database.py  claude.md  commit.sh  database_migrations.py  deepseek_batch_processor.py  deepseek_processor.py  deepseek_semantic_pipeline.py  deploy.sh  document_graph_builder.py  document_importer.py  document_processing_pipeline.py  document_tracker.py  document_upload_routes.py  generate_batch_report.py  graphrag.py  gunicorn.conf.p  (+33 more)
.claude/: settings.local.json
attached_assets/: LEXI_Algemene_Voorwaarden (2)_1760101500269.md  LEXI_Privacy_Policy_1760101500270.md  Pasted--OPTIE-A-MRR-TRACKING-Voeg-MRR-Monthly-Recurring-Revenue-tracking-toe-aan-het-Super-Admin-Dashb-1759929957984_1759929957987.txt  Pasted--STOP-You-are-using-the-WRONG-library-and-approach-I-do-NOT-have-a-Reasoning-Engine-I-have-a-RA-1759917809110_1759917809110.txt  Pasted--type-service-account-project-id-uzb-agent-private-key-id-a9f377f8bf98106c476-1759916980777_1759916980780.txt  (+11 more)
migrations/: 001_cao_tables.sql
scripts/: README_GIT_AUTOPUSH.md  backup-check.sh  git_autopush.sh  monitor.sh  (+2 more)
(+53 files in other folders)
