[tool.poetry]
name = "lexi-cao"
version = "0.1.0"
description = ""
authors = ["Claude <claude@anthropic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gqlalchemy = "^1.8.0"
sentence-transformers = "^5.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
